templates/user_page.html: user page fixes
prevent things from overflowing and add some tooltips

--- a/static/style.css
+++ b/static/style.css
@@ -394,6 +394,7 @@ body {
   list-style: none;
   padding-left: 0;
   margin-top: 0;
+  min-width: 0;
 }
 
 .key li {
@@ -411,10 +412,16 @@ body {
   min-width: 50px;
   font-size: 0.9em;
   margin-right: 10px;
+  flex-shrink: 0;
 }
 
 .key .choice {
   font-size: 0.9em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  flex-grow: 1;
+  min-width: 0;
 }
 
 .top-bar-pagination {
